--- a/Streamlit/requirements.txt
+++ b/Streamlit/requirements.txt
@@ -1,6 +1,9 @@
-streamlit
-numpy
-scikit-learn
-pandas
-matplotlib
-seaborn
+streamlit==1.25.0
+numpy==1.23.5
+scikit-learn==1.2.2
+sklearn-pandas==2.2.0
+joblib==1.3.2
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+matplotlib-venn==0.11.9
+seaborn==0.12.2
